--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-header {
+/* header {
   width: 100%;
-}
+} */
 
 /* .blog {
   border: 1px solid orangered;
@@ -42,7 +42,7 @@ article {
 }
 
 .container {
-  width: 500px;
+  width: 32.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -152,5 +152,9 @@ p {
 
   .section-one {
     margin: 0;
+  }
+
+  .container {
+    width: auto;
   }
 }
